--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/navigation"
-  app:startDestination="@id/login_fragment">
+  app:startDestination="@id/home_fragment">
 
   <fragment
     android:id="@+id/login_fragment"
@@ -61,6 +61,9 @@
     <action
       android:id="@+id/action_home_fragment_to_friendListFragment"
       app:destination="@id/friendListFragment" />
+    <action
+      android:id="@+id/action_home_fragment_to_addExpenseFragment"
+      app:destination="@id/addExpenseFragment" />
   </fragment>
   <fragment
     android:id="@+id/account_home"
