--- a/native/android/app/src/main/res/layout/fragment_add_expense.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_expense.xml
@@ -122,12 +122,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/constraintDate"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="32dp"
-      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_height="0dp"
+      android:layout_marginTop="120dp"
       app:layout_constraintEnd_toStartOf="@+id/camera"
       app:layout_constraintHorizontal_bias="0.5"
-      app:layout_constraintStart_toStartOf="parent">
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView10">
 
       <TextView
         android:id="@+id/calendarYear"
