グループとフレンドの両方のリサイクルビューがあるところでどっちかを隠せるようにした

--- a/native/android/app/src/main/res/layout/fragment_group_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_friend.xml
@@ -116,12 +116,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-      android:id="@+id/constraintLayout5"
+      android:id="@+id/groupSwitcher"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:background="#99C1C1C1"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/addFriend">
 
@@ -147,22 +148,26 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/groupRecycle"
+      android:id="@+id/groupRecycleView"
       android:layout_width="match_parent"
-      android:layout_height="200dp"
+      android:layout_height="0dp"
+      android:visibility="visible"
+      app:layout_constraintBottom_toTopOf="@+id/friendSwitcher"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />
+      app:layout_constraintTop_toBottomOf="@+id/groupSwitcher" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-      android:id="@+id/constraintLayout6"
+      android:id="@+id/friendSwitcher"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="#99C1C1C1"
+      app:layout_constraintBottom_toTopOf="@+id/friendsRecycleView"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/groupRecycle">
+      app:layout_constraintTop_toBottomOf="@+id/groupRecycleView">
 
       <ImageView
         android:id="@+id/imageView13"
@@ -189,10 +194,12 @@
       android:id="@+id/friendsRecycleView"
       android:layout_width="0dp"
       android:layout_height="0dp"
+      android:visibility="visible"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />
+      app:layout_constraintTop_toBottomOf="@+id/friendSwitcher" />
 
     <TextView
       android:id="@+id/nowLoading"
