--- a/native/android/app/src/main/res/layout/fragment_account_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_account_home.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="90dp"
-        android:text="ユーザーネーム"
+        android:text="@string/username"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="プロフィールを表示"
+        android:text="@string/show_profie"
         android:textColor="@color/ourTheme"
         app:layout_constraintStart_toEndOf="@+id/UserAccountThumnail"
         app:layout_constraintStart_toStartOf="@+id/setUserNameText"
@@ -134,7 +134,7 @@
         android:id="@+id/profileText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="個人情報"
+        android:text="@string/private_information"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/displayProfileButton"
         app:layout_constraintStart_toStartOf="@+id/accountSettingText"
@@ -146,7 +146,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="アカウントの設定"
+        android:text="@string/account_setting"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/UserAccountThumnail"
         app:layout_constraintTop_toBottomOf="@+id/horizonBar" />
@@ -156,7 +156,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="アプリの設定"
+        android:text="@string/app_setting"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/profileText"
         app:layout_constraintTop_toBottomOf="@+id/displayProfileButton" />
@@ -165,7 +165,7 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="通知の設定"
+        android:text="@string/notification_setting"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/displayNotificationButton"
         app:layout_constraintStart_toStartOf="@+id/applicationSettingText"
@@ -198,7 +198,7 @@
         android:id="@+id/passwordChangeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="パスワードの変更"
+        android:text="@string/change_password"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/displayPasswordButton"
         app:layout_constraintStart_toStartOf="@+id/textView14"
@@ -209,7 +209,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="情報"
+        android:text="@string/information"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/passwordChangeText"
         app:layout_constraintTop_toBottomOf="@+id/horizonBar4" />
@@ -230,7 +230,7 @@
         android:id="@+id/prestoPayText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Presto Payについて"
+        android:text="@string/about_prestopay"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/horizonBar5"
         app:layout_constraintStart_toStartOf="@+id/informationText"
@@ -250,7 +250,7 @@
         android:id="@+id/helpText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ヘルプ"
+        android:text="@string/help"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/horizonBar6"
         app:layout_constraintStart_toStartOf="@+id/prestoPayText"
@@ -271,7 +271,7 @@
         android:id="@+id/inviteText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Presto Payに誘う"
+        android:text="@string/invite_prestopay"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/displayInviteButton"
         app:layout_constraintStart_toStartOf="@+id/helpText"
@@ -281,7 +281,7 @@
         android:id="@+id/logoutText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ログアウト"
+        android:text="@string/logout"
         android:textColor="@color/ourTheme"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/logoutButton"
