--- a/native/android/app/src/main/res/layout/fragment_add_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_friend.xml
@@ -17,8 +17,9 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="16dp"
+      android:autofillHints=""
       android:ems="10"
-      android:hint="ユーザー名"
+      android:hint="@string/username"
       android:inputType="textPersonName"
       app:layout_constraintEnd_toStartOf="@+id/search"
       app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +48,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Presto Payに誘う"
+        android:text="@string/invite_prestopay"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toStartOf="@+id/imageView4"
