--- a/native/android/app/src/main/res/layout/fragment_update_pass_login.xml
+++ b/native/android/app/src/main/res/layout/fragment_update_pass_login.xml
@@ -15,7 +15,7 @@
       android:layout_marginEnd="32dp"
       android:autofillHints=""
       android:ems="10"
-      android:hint="現在のパスワード"
+      android:hint="@string/current_password"
       android:inputType="textPassword"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
       android:layout_marginTop="48dp"
       android:layout_marginEnd="16dp"
       android:background="@color/ourTheme"
-      android:text="パスワードの変更"
+      android:text="@string/change_password"
       android:textColor="@android:color/background_light"
       app:layout_constraintEnd_toEndOf="@+id/passConfirmEditText"
       app:layout_constraintStart_toStartOf="@+id/passConfirmEditText"
@@ -44,7 +44,7 @@
       android:layout_marginTop="32dp"
       android:autofillHints=""
       android:ems="10"
-      android:hint="新しいパスワード"
+      android:hint="@string/new_password"
       android:inputType="textPassword"
       app:layout_constraintEnd_toEndOf="@+id/currentPassEdit"
       app:layout_constraintStart_toStartOf="@+id/currentPassEdit"
@@ -57,7 +57,7 @@
       android:layout_marginTop="48dp"
       android:autofillHints=""
       android:ems="10"
-      android:hint="新しいパスワード(確認用)"
+      android:hint="@string/confirm_new_password"
       android:inputType="textPassword"
       android:maxLength="15"
       app:layout_constraintEnd_toEndOf="@+id/passEditText"
