--- a/native/android/app/src/main/res/layout/fragment_friend_list.xml
+++ b/native/android/app/src/main/res/layout/fragment_friend_list.xml
@@ -31,7 +31,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
-    android:text="新規グループのメンバーを選択"
+    android:text="@string/choose_group_members"
     android:textSize="18sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -45,10 +45,11 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="16dp"
     android:ems="10"
-    android:hint="検索"
+    android:hint="@string/search"
     android:inputType="textPersonName"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView6" />
+    app:layout_constraintTop_toBottomOf="@+id/textView6"
+    android:autofillHints="" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
