--- a/native/android/app/src/main/res/menu/fooder.xml
+++ b/native/android/app/src/main/res/menu/fooder.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
     android:id="@+id/action_people"
-    android:title="グループ・友達"
+    android:title="@string/group_friend"
     android:icon="@drawable/ic_people_black_24dp"
     android:enabled="true"/>
   <item
@@ -11,7 +11,7 @@
     android:enabled="false"/>
   <item
   android:id="@+id/action_person"
-  android:title="アカウント"
+  android:title="@string/account"
   android:icon="@drawable/ic_person_black_24dp"
   android:enabled="true"/>
 </menu>
