--- a/native/android/app/src/main/res/layout/fragment_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_home.xml
@@ -56,7 +56,7 @@
       </androidx.constraintlayout.widget.ConstraintLayout>
 
       <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/groupHomeRecycle"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
