--- a/native/android/app/src/main/res/layout/fragment_friend_list.xml
+++ b/native/android/app/src/main/res/layout/fragment_friend_list.xml
@@ -5,7 +5,7 @@
   <data>
     <variable
       name="viewModel"
-      type="work.calmato.prestopay.util.ViewModelFriendGroup" />
+      type="work.calmato.prestopay.util.ViewModelFriend" />
   </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout
