--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -142,6 +142,12 @@
       app:destination="@id/home_fragment" />
   </fragment>
   <fragment
+    android:id="@+id/groupListFragment"
+    android:name="work.calmato.prestopay.ui.groupList.GroupListFragment"
+    android:label="GroupListFragment"
+    tools:layout="@layout/fragment_group_list">
+  </fragment>
+  <fragment
     android:id="@+id/createGroupFragment"
     android:name="work.calmato.prestopay.ui.createGroup.CreateGroupFragment"
     android:label="fragment_create_group"
