--- a/native/android/app/src/main/res/layout/fragment_add_expense.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_expense.xml
@@ -226,7 +226,17 @@
       app:layout_constraintBottom_toBottomOf="@+id/amountEdit"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/amountEdit" />
-
+    <TextView
+      android:id="@+id/nowLoading"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/now_loading"
+      android:textSize="18sp"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 
 
