--- a/native/android/app/src/main/res/layout/fragment_reset_pass.xml
+++ b/native/android/app/src/main/res/layout/fragment_reset_pass.xml
@@ -45,5 +45,16 @@
       app:layout_constraintEnd_toEndOf="@+id/emailEditText"
       app:layout_constraintStart_toStartOf="@+id/emailEditText"
       app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
+    <TextView
+      android:id="@+id/nowLoading"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/now_loading"
+      android:textSize="18sp"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
