--- a/native/android/app/src/main/res/layout/fragment_add_expense.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_expense.xml
@@ -81,23 +81,14 @@
       app:layout_constraintStart_toStartOf="@+id/textView9"
       app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
-    <Spinner
-      android:id="@+id/targetSpinner"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      app:layout_constraintBottom_toBottomOf="@+id/textView10"
-      app:layout_constraintEnd_toEndOf="@+id/payerSpinner"
-      app:layout_constraintStart_toStartOf="@+id/payerSpinner"
-      app:layout_constraintTop_toTopOf="@+id/textView10" />
-
     <TextView
       android:id="@+id/advancedSetting"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:text="@string/advanced_setting"
-      app:layout_constraintEnd_toEndOf="@+id/targetSpinner"
-      app:layout_constraintTop_toBottomOf="@+id/targetSpinner" />
+      app:layout_constraintEnd_toEndOf="@+id/targetText"
+      app:layout_constraintTop_toBottomOf="@+id/targetText" />
 
     <ImageView
       android:id="@+id/camera"
@@ -191,9 +182,8 @@
       android:textSize="18sp"
       android:visibility="invisible"
       app:layout_constraintBottom_toTopOf="@+id/camera"
-      app:layout_constraintEnd_toEndOf="@+id/targetSpinner"
-      app:layout_constraintStart_toStartOf="@+id/targetSpinner"
-      app:layout_constraintTop_toBottomOf="@+id/advancedSetting" />
+      app:layout_constraintTop_toBottomOf="@+id/advancedSetting"
+      tools:layout_editor_absoluteX="96dp" />
 
     <ImageView
       android:id="@+id/thumbnail"
@@ -237,6 +227,17 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+      android:id="@+id/targetText"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:text="ここを押して選択"
+      android:textAlignment="center"
+      app:layout_constraintBottom_toBottomOf="@+id/textView10"
+      app:layout_constraintEnd_toEndOf="@+id/payerSpinner"
+      app:layout_constraintStart_toStartOf="@+id/payerSpinner"
+      app:layout_constraintTop_toTopOf="@+id/textView10" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 
 
