--- a/native/android/app/src/main/res/layout/fragment_add_expense.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_expense.xml
@@ -182,8 +182,9 @@
       android:textSize="18sp"
       android:visibility="invisible"
       app:layout_constraintBottom_toTopOf="@+id/camera"
-      app:layout_constraintTop_toBottomOf="@+id/advancedSetting"
-      tools:layout_editor_absoluteX="96dp" />
+      app:layout_constraintEnd_toEndOf="@+id/targetText"
+      app:layout_constraintStart_toStartOf="@+id/targetText"
+      app:layout_constraintTop_toBottomOf="@+id/advancedSetting" />
 
     <ImageView
       android:id="@+id/thumbnail"
