--- a/native/android/app/src/main/res/layout/fragment_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_home.xml
@@ -61,29 +61,41 @@
           app:layout_constraintTop_toBottomOf="@+id/amountText" />
       </androidx.constraintlayout.widget.ConstraintLayout>
 
-      <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/groupHomeRecycle"
+      <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nestedAmount"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0">
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-               android:id="@+id/bottom_navigation"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_alignParentBottom="true"
-               app:layout_constraintBottom_toBottomOf="parent"
-              android:background="@color/ourTheme"
-               app:menu="@menu/fooder"/>
+        <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/groupHomeRecycle"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.0"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/nestedAmount"
+          app:layout_constraintVertical_bias="1.0" />
+      </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+      <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/ourTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/fooder" />
 
       <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
