グループリストでスワイプで更新できるようにした

--- a/native/android/app/src/main/res/layout/fragment_group_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_friend.xml
@@ -159,7 +159,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="#99C1C1C1"
-      app:layout_constraintBottom_toTopOf="@+id/swipeContainerFriend"
+      app:layout_constraintBottom_toTopOf="@+id/swipeContainer"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
@@ -178,7 +178,7 @@
         app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-      android:id="@+id/swipeContainerFriend"
+      android:id="@+id/swipeContainer"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
