友達リストでスワイプで更新できるようにした

--- a/native/android/app/src/main/res/layout/fragment_friend_list.xml
+++ b/native/android/app/src/main/res/layout/fragment_friend_list.xml
@@ -12,10 +12,9 @@
      android:layout_width="match_parent"
     android:layout_height="match_parent"
   android:backgroundTint="#875D5D">
-
-  <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/friendsRecycleView"
-    android:layout_width="0dp"
+  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:id="@+id/swipeContainer"
+    android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
@@ -24,7 +23,13 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/searchEdit" />
+    app:layout_constraintTop_toBottomOf="@+id/searchEdit" >
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/friendsRecycleView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+     />
+  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
   <TextView
     android:id="@+id/textView6"
