--- a/native/android/app/src/main/res/layout/fragment_group_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_detail.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:tools="http://schemas.android.com/tools">
+  <data>
+    <variable
+      name="viewModelGroupDetail"
+      type="work.calmato.prestopay.util.ViewModelPayment" />
+  </data>
+<androidx.constraintlayout.widget.ConstraintLayout
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="#FFFFFF">
@@ -71,6 +77,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/recyclerViewPayment"
           android:layout_width="match_parent"
           android:layout_height="match_parent" />
       </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
@@ -105,5 +112,4 @@
     app:layout_constraintTop_toBottomOf="@id/bottom_navigation"
     app:layout_constraintTop_toTopOf="@id/bottom_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-<!--TODO グラフの追加-->
-<!--TODO リストの追加-->
+</layout>
