--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/navigation"
-  app:startDestination="@id/login_fragment">
+  app:startDestination="@id/groupDetail">
 
   <fragment
     android:id="@+id/login_fragment"
@@ -66,6 +66,9 @@
     <action
       android:id="@+id/action_home_fragment_to_groupListFragment"
       app:destination="@id/groupListFragment" />
+    <action
+      android:id="@+id/action_home_fragment_to_groupDetail"
+      app:destination="@id/groupDetail" />
   </fragment>
   <fragment
     android:id="@+id/account_home"
@@ -193,5 +196,15 @@
     <action
       android:id="@+id/action_addExpenseFragment_to_home_fragment"
       app:destination="@id/home_fragment" />
+  </fragment>
+  <fragment
+    android:id="@+id/groupDetail"
+    android:name="work.calmato.prestopay.ui.groupDetail.GroupDetailFragment"
+    android:label="fragment_group_detail"
+    tools:layout="@layout/fragment_group_detail">
+    <argument
+      android:name="paymentsList"
+      app:argType="work.calmato.prestopay.network.GroupPropertyResponse"
+      app:nullable="true"/>
   </fragment>
 </navigation>
