--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/navigation"
-  app:startDestination="@id/groupDetail">
+  app:startDestination="@id/login_fragment">
 
   <fragment
     android:id="@+id/login_fragment"
@@ -203,8 +203,11 @@
     android:label="fragment_group_detail"
     tools:layout="@layout/fragment_group_detail">
     <argument
-      android:name="paymentsList"
+      android:name="groupDetail"
       app:argType="work.calmato.prestopay.network.GroupPropertyResponse"
       app:nullable="true"/>
+    <action
+      android:id="@+id/action_groupDetail_to_home_fragment"
+      app:destination="@id/home_fragment" />
   </fragment>
 </navigation>
