支払い一覧のタグを表示できるようにした

--- a/native/android/app/src/main/res/layout/list_item_payment.xml
+++ b/native/android/app/src/main/res/layout/list_item_payment.xml
@@ -68,7 +68,8 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@drawable/ic_baseline_label_24" />
+      app:srcCompat="@drawable/ic_baseline_label_24"
+      app:paymentTag = "@{payment}"/>
 
     <TextView
       android:id="@+id/whoPaidView"
