--- a/native/android/app/src/main/res/layout/list_item_tag.xml
+++ b/native/android/app/src/main/res/layout/list_item_tag.xml
@@ -6,7 +6,7 @@
   <data>
     <variable
       name="tag"
-      type="work.calmato.prestopay.util.Tag" />
+      type="work.calmato.prestopay.network.Tag" />
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
