--- a/native/android/app/src/main/res/layout/fragment_group_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_friend.xml
@@ -34,7 +34,7 @@
       app:layout_constraintTop_toTopOf="@+id/thumbnail" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-      android:id="@+id/addGroup"
+      android:id="@+id/groupEditAddFriend"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
@@ -80,7 +80,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
-      app:layout_constraintTop_toBottomOf="@+id/addGroup"
+      app:layout_constraintTop_toBottomOf="@+id/groupEditAddFriend"
       tools:layout_editor_absoluteX="1dp">
 
       <ImageView
