--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -182,6 +182,13 @@
     tools:layout="@layout/fragment_notification_set">
   </fragment>
   <fragment
+    android:id="@+id/groupEditFragment"
+    android:name="work.calmato.prestopay.ui.groupEdit.GroupEditFragment"
+    android:label="fragment_group_edit"
+    tools:layout="@layout/fragment_group_edit">
+  </fragment>
+
+  <fragment
     android:id="@+id/addExpenseFragment"
     android:name="work.calmato.prestopay.ui.addExpense.AddExpenseFragment"
     android:label="fragment_add_expense"
@@ -209,5 +216,8 @@
     <action
       android:id="@+id/action_groupDetail_to_home_fragment"
       app:destination="@id/home_fragment" />
+    <action
+      android:id="@+id/action_groupDetail_to_groupEditFragment"
+      app:destination="@id/groupEditFragment" />
   </fragment>
 </navigation>
