--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -228,5 +228,8 @@
     <action
       android:id="@+id/action_groupDetail_to_account_home"
       app:destination="@id/account_home" />
+    <action
+      android:id="@+id/action_groupDetail_to_addExpenseFragment"
+      app:destination="@id/addExpenseFragment" />
   </fragment>
 </navigation>
