--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -189,8 +189,11 @@
     android:name="work.calmato.prestopay.ui.groupEdit.GroupEditFragment"
     android:label="fragment_group_edit"
     tools:layout="@layout/fragment_group_edit">
+    <argument
+      android:name="groupEditList"
+      app:argType="work.calmato.prestopay.network.GroupPropertyResponse"
+      app:nullable="true" />
   </fragment>
-
   <fragment
     android:id="@+id/addExpenseFragment"
     android:name="work.calmato.prestopay.ui.addExpense.AddExpenseFragment"
