--- a/native/android/app/src/main/res/layout/fragment_group_edit.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit.xml
@@ -73,7 +73,7 @@
       app:layout_constraintTop_toBottomOf="@+id/groupDisplay" />
 
     <ImageView
-      android:id="@+id/groupEditIcon"
+      android:id="@+id/groupThumnail"
       android:layout_width="90dp"
       android:layout_height="90dp"
       android:layout_marginTop="32dp"
@@ -96,7 +96,8 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/groupEditIcon" />
+      app:layout_constraintTop_toBottomOf="@+id/groupThumnail"
+      android:maxLength="31" />
 
     <TextView
       android:id="@+id/groupDisplay"
