友達の検索機能を実装

--- a/native/android/app/src/main/res/layout/fragment_group_edit_add_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit_add_friend.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent">
 
     <SearchView
-      android:id="@+id/search"
+      android:id="@+id/searchFriend"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:iconifiedByDefault="false"
@@ -27,7 +27,7 @@
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/search" />
+      app:layout_constraintTop_toBottomOf="@+id/searchFriend" />
 
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/groupAddFriendRecycle"
