--- a/native/android/app/src/main/res/layout/fragment_add_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_friend.xml
@@ -21,7 +21,7 @@
       android:ems="10"
       android:hint="@string/username"
       android:inputType="textPersonName"
-      app:layout_constraintEnd_toStartOf="@+id/search"
+      app:layout_constraintEnd_toStartOf="@+id/searchFriend"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,7 +67,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-      android:id="@+id/search"
+      android:id="@+id/searchFriend"
       android:layout_width="50dp"
       android:layout_height="0dp"
       android:layout_marginEnd="16dp"
