--- a/native/android/app/src/main/res/layout/fragment_payment_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_payment_detail.xml
@@ -80,5 +80,18 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />
+
+  <com.github.mikephil.charting.charts.BarChart
+    android:id="@+id/chart"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="16dp"
+    app:layout_constraintBottom_toTopOf="@+id/completed"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/comment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
